--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
+# These are supported funding model platforms
+
 github: hismightiness  
-patreon: willstrohl  
-custom:  ["https://venmo.com/Will-Strohl","https://amzn.to/2WcD0jZ"]  
